@@ -12,6 +12,7 @@ General Enhancements:
 * Added +/- selection indicators to menu CSS (Chris T)
 * Added "dynatable.html" template that can be included in templates (Chris T)
 * Dynatable forms obtained through GET now show link back to form (Chris T)
+* LedgerSMB->error and Form->error now show db version and company (Chris T)
 
 Customer/Vendor Handling 
 * Added sales tax id and license number fields for companies (Chris T)
